- Added Viewport implementations (Extend, Fill, Fit, Screen and Stretch)
- Added MonospaceFont, MonospaceFontCache and FontGlyphLayout for simplified font rendering
- Added method to show/hide ScrollBox scroll track
- Added support for Tiled object templates
- Added TextInputListener interface for TextBox
- Added grabInput method to TextBox
- Improved Graphics performance by reducing spritebatch flushes
- Tilesets can now be loaded from TextureAtlas instances
- UiContainer can now have multiple navigation action keys
- Mdx.playerData now uses temp files to write before moving files to target filename
- Fixed ScrollBox not using disabled button state when thumb cannot scroll
- Fixed Graphics#tint not being reset each frame
- Fixed UI navigation cursor not updating when switching between controller and mouse
- Fixed DesktopPlayerData not ensuring data directory exists when writing JSON or binary files
- Fixed Sprite not carrying over flip status from TextureRegion
- Fixed out of bounds error when TextBox is set to value smaller than previous value
- (#79) Add isInterpolateRequired() to collision classes

[1.8.2]
- Fixed UI hotkeys triggering actions while elements are disabled

[1.8.1]
- [BREAKING] TileMergeMode modes renamed to Y_THEN_X, X_THEN_X and SQUARE
- Added new TileMergeMode modes; Y_THEN_X_ALTERNATING and X_THEN_Y_ALTERNATING
- Added support for polyline per Tiled 1.2 specification

[1.8.0]
- Update to RoboVM 2.3.3
- [BREAKING] Replace usages of Java collections with GDX collections to improve performance
- [BREAKING] UI Modal and Containers are now unified into a single Container class
- [BREAKING] Deferred UI tasks can now be deferred until update() or layout()
- [BREAKING] UI elements now default to pixel coordinate UI layout
- [BREAKING] Rename PS4Button.X to PS4Button.CROSS per PS specification
- Added support for all GDX collection classes in XML/JSON serialization
- Added CustomUiElement class to simplify implementing custom UI elements