@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<map version="1.0" tiledversion="2018.08.06" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" infinite="0" backgroundcolor="#0000ff" nextlayerid="7" nextobjectid="16">
+<map version="1.2" tiledversion="1.2.2" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" infinite="0" backgroundcolor="#0000ff" nextlayerid="10" nextobjectid="16">
  <properties>
   <property name="testMapProperty" value="SUCCESS"/>
  </properties>
@@ -25,16 +25,18 @@
    </animation>
   </tile>
  </tileset>
- <layer id="1" name="Ground" width="10" height="8">
-  <data encoding="base64" compression="zlib">
+ <group id="7" name="Group 1">
+  <layer id="1" name="Ground" width="10" height="8">
+   <data encoding="base64" compression="zlib">
    eJxjZGBgYCKAmYFYEIiFCGBhJHWGQKyEho2wqAOxN6FhQQrUOWJxvxMWdYT8oYjF/ehYGYgBhUoLPw==
   </data>
- </layer>
- <layer id="2" name="Animated" width="10" height="8">
-  <data encoding="base64" compression="zlib">
+  </layer>
+  <layer id="2" name="Animated" width="10" height="8">
+   <data encoding="base64" compression="zlib">
    eJxjYBgFMDCPSHVrkdgAKXQBTA==
   </data>
- </layer>
+  </layer>
+ </group>
  <layer id="3" name="Collisions" width="10" height="8">
   <properties>
    <property name="testLayerProperty" value="SUCCESS"/>
