@@ -13,6 +13,8 @@
 - Added support for Tiled object templates
 - Added TextInputListener interface for TextBox
 - Added grabInput method to TextBox
+- Added support for Tiled layer groups
+- Added flag to set strict Tile layer visibility state
 - Improved Graphics performance by reducing spritebatch flushes
 - Tilesets can now be loaded from TextureAtlas instances
 - UiContainer can now have multiple navigation action keys
